Fix Confirmation variant spelling